# muscat-pypi

./: CMakeLists.txt  LICENSE  PUBLISHING.md  README.md  README.txt  pyproject.toml
.github/workflows/: publish-pypi-matrix.yml  publish-pypi.yml  setup-secrets.yml
TestScripts/: TestLinuxInstallPackages.bash  TestWindowsInstallPackages.bat
cmake/: SuperBuild.cmake
cmake/dependencies/: CMakeLists.txt  README.txt  before_all_linux.bash
