[build-system]
requires = [
  "scikit-build-core",
  "numpy",
  "cython",
  "eigency>=3.4.0.4",
  "sympy",
  "pywin32 ; platform_system == 'Windows'",
]

build-backend = "scikit_build_core.build"

[project]
name = "Muscat"

# this string is replaced by the GitHub action to the actual tag or branch name used for the compilation
#dynamic = ["version"]  -> version = "2.5.4"   (for example)
dynamic = ["version"]

description = "Tools for finite element computations"

dependencies = [
    "numpy",
    "scipy",
    "sympy",
    "networkx",
    "eigency>=3.4.0.4",    # For interfacing with Eigen C++ library
    "pywin32 ; platform_system == 'Windows'",
    "dill",       # For advanced serialization
    "cvxpy",      # For AnisotropicMetricComputation
]

[project.optional-dependencies]
gui = [
    "matplotlib",
    "vtk",        # Optional, for 3D visualization
    "Plotly",     # Optional, for interactive plots
    "pyvista",    # For 3D visualization
 ]

storage = [
    "h5py",
    "pycgns ; platform_system == 'Linux'",
    "meshio",     # For mesh handling
    ]

all = [
  "muscat[gui]",
  "muscat[storage]"
]

[tool.cibuildwheel]
test-requires = ["h5py","pycgns","pyvista","meshio","plotly","cosapp"]
test-command = "python -m Muscat.Helpers.Check"

# This skip pattern ensures only manylinux wheels are built on Linux
skip = "*-musllinux_*"

#before-all = ["",]

[tool.coverage.run]
branch = true

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
    ]

ignore_errors = true

omit = [
    "shibokensupport/*",
    "pyscript",
    "signature_bootstrap.py",
]
precision = 2

[tool.coverage.html]
directory = "html"
title = "Coverage Report for Muscat"

[project.urls]
Homepage = "https://gitlab.com/drti/muscat"
Documentation = "https://muscat.readthedocs.io/"
Source = "https://gitlab.com/drti/muscat"
Tracker = "https://gitlab.com/drti/muscat/-/issues"

[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"

# Specify the minimum CMake version required
#cmake.version = "3.28"
cmake.build-type = "Release"
build.verbose = true
cmake.source-dir = "."
wheel.exclude = ["**.pyx"]

# The versions of Ninja to allow.
ninja.version = ">=1.5"
# Use Make as a fallback if a suitable Ninja executable is not found.
ninja.make-fallback = true
# The build targets to use when building the project.
build.targets = ["muscat"]

[tool.scikit-build.cmake.define]
MuscatTagBranch = "MuscatPyPi" # this values will be changed by the github action
#MuscatTagBranch = "master" # this values will be changed by the github action #TODO

